unpackaged/main/default/objects/blng__InvoiceLine__c/fields/blng__Debits__c.field-meta.xml
<CustomField>
    <fullName>blng__Debits__c</fullName>
    <inlineHelpText>Net d’allocations et d’allocations annulées pour les notes de débit</inlineHelpText>
    <label>Debits</label>
    <summarizedField>blng__DebitNoteAllocation__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>blng__DebitNoteAllocation__c.blng__Unallocated__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__DebitNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>