unpackaged/main/default/objects/blng__InvoiceLine__c/fields/blng__StartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__StartDate__c</fullName>
    <description>The starting date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
    <inlineHelpText>Le premier jour de la période de facturation.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>