unpackaged/main/default/objects/blng__InvoiceLine__c/fields/blng__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>blng__Subtotal__c</fullName>
    <inlineHelpText>Total ligne de facture (avant taxes)</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>