unpackaged/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxStreet__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxStreet__c</fullName>
    <inlineHelpText>À utiliser dans les calculs de taxes. Adresse postale de destination pour ce produit.</inlineHelpText>
    <label>Tax Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>