unpackaged/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxZipCode__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxZipCode__c</fullName>
    <inlineHelpText>À utiliser dans les calculs de taxes. Code postal de destination pour ce produit.</inlineHelpText>
    <label>Tax Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>